# raad

./: .gitignore  PKGBUILD  README.md  pyproject.toml
raad/: cli.py
