[project]
name = "raad"
version = "0.1.0"
description = "Simple sudo wrapper for FreeIPA admin command running"
readme = "README.md"
authors = [{ name = "Vladislav \"ElCapitan\" Nazarov", email = "gameforceman1808@gmail.com" }]
license = {text = "MIT"}
requires-python = ">=3.6"

[project.scripts]
raad = "raad.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
